# hypermodern-python

./: .flake8  LICENSE  README.md  noxfile.py  pyproject.toml
docs/: conf.py
src/hypermodern_python/: __init__.py  console.py  wikipedia.py
src/hypermodern_python.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_console.py  test_wikipedia.py
