[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = ["anthonynault"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/anthonynault/hypermodern-python"
repository = "https://github.com/anthonynault/hypermodern-python"
keywords = ["hypermodern"]
